fixed overflow issue

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -25,6 +25,7 @@
 }
 .inner {
    background-color: rgba(78, 76, 76, 0.3);
+   overflow-x: hidden;
 }
 .header-banner-container {
   position: relative;
