--- a/src/pages/Registry/Registry.css
+++ b/src/pages/Registry/Registry.css
@@ -13,6 +13,7 @@
   margin-right: auto;
   padding-top: 1em;
   padding-bottom: 4em;
+  overflow: hidden;
 }
 .inner-wrapper-registry::before {
   content: "";
@@ -56,59 +57,9 @@
 
 .flower-border-registry {
   position: absolute;
-  right: -5.5rem;
-  bottom: -1.5rem;
-  /* margin-top: -3rem; */
-  /* margin-top: 0.5em; */
+  right: -5rem;
+  bottom: -1rem;
   height: 25%;
   z-index: 1;
   transform: rotate(315deg);
-  overflow: hidden;
 }
-/* .registry-button h2 {
-  margin: 0;
-} */
-/* .store-container {
-  margin-top: 1em;
-  position: relative;
-  
-  display: flex;
-  flex-direction: column;
-  border: black solid 2px;
-  align-items: center;
-  justify-content: space-between;
-  height: auto;
-  margin-bottom: 4em;
-  border-bottom: none;
-  border-right: none;
-  border-left: none;
-  border-radius: 5%;
-} */
-/* .store-container h3 {
-  color: black;
-  margin-left: 0.5em;
-  margin-bottom: 20%;
-  font-size: 1em;
-} */
-
-/* .style-container1 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  height: 89%;
-  width: 24.5%;
-  border-bottom: black solid 2px;
-  border-top-left-radius: 10%;
-  border-left: black solid 2px;
-} */
-/* .style-container2 {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 89%;
-  width: 24.5%;
-  border-bottom: black solid 2px;
-  border-top-right-radius: 10%;
-  border-right: black solid 2px;
-} */
